--- a/banestes/src/components/Box/Box.module.scss
+++ b/banestes/src/components/Box/Box.module.scss
@@ -1,23 +1,23 @@
 .bodyBox {
-    background: rgba(255, 255, 255, 0.85);
-    color: black;
-    border-radius: 16px;
-    padding: 24px;
-    width: 320px;
-    margin: 40px auto;
-    cursor: pointer;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    transition: all 0.3s;
-    position: relative;
-  }
-  
-  .centered {
+  background: rgba(255, 255, 255);
+  color: black;
+  border-radius: 16px;
+  padding: 24px;
+  margin: 40px auto;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  transition: all 0.3s;
+  position: relative;
+
+  &.modal-box {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 1001;
     margin: 0;
-    z-index: 100;
+    width: auto;
+    max-width: 90%;
   }
-  
+}
