--- a/banestes/src/index.css
+++ b/banestes/src/index.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -26,7 +30,6 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
   min-height: 100vh;
 }
 
